--- a/_tkgs-sparkling-moments/2023.md
+++ b/_tkgs-sparkling-moments/2023.md
@@ -6,3 +6,6 @@ description: ""
 ![](/images/Sparkling%20Intro.png)
 
 # 2022 GCE O-level Results
+<img src="/images/Splash.png" style="width:600px;height:360px;"><br>
+Our heartiest congratulations to the Class of 2022. You have done well and we wish you all the best in your future endeavors. 
+Please click &nbsp;<a href="https://drive.google.com/file/d/1mHFJFMvjglrjr4tuQE_NDwdKpNNUrllw/view?usp=sharing" target="_blank" rel="noopener">here</a>&nbsp;here to view the slides.
