--- a/_tkgs-sparkling-moments/2021.md
+++ b/_tkgs-sparkling-moments/2021.md
@@ -3,7 +3,7 @@ title: "2021"
 permalink: /tkgs-sparkling-moments/moments/2021/
 description: ""
 ---
-
+![](/images/Sparkling%20Intro.png)
 <h3><strong>Victoria Junior College Scholars Featuring our Ex-TKGians</strong></h3>
 <img style="width: 75%;" src="/images/21a.png">
 <p style="text-align: center;">Congratulations to our ex-TKGians on their success!! We are so proud of you!!!</p>
