--- a/_tkgs-sparkling-moments/2023.md
+++ b/_tkgs-sparkling-moments/2023.md
@@ -5,6 +5,9 @@ description: ""
 ---
 ![](/images/Sparkling%20Intro.png)
 
+<h3><strong>Outstanding Academic Achievement by our Ex-TKGians</strong></h3>
+<img src="/images/Sparkling_Moment/TKGS_Sparkling_Moment.png" style="width:600px;height:850px;"><br> Congratulations to our ex-TKGians on their success!! We are so proud of you!!
+
 <h3><strong>2022 GCE O-level Results</strong></h3>
 <img src="/images/Splash.png" style="width:600px;height:360px;"><br>
 Our heartiest congratulations to the Class of 2022. You have done well and we wish you all the best in your future endeavors. 
