--- a/_tkgs-sparkling-moments/2023.md
+++ b/_tkgs-sparkling-moments/2023.md
@@ -3,7 +3,7 @@ title: "2023"
 permalink: /tkgs-sparkling-moments/2023/
 description: ""
 ---
-![](/images/Sparkling%20Intro.png)
+<img src="/images/Sparkling_Moment/sparkling_intro.png">
 
 <h3><strong>Outstanding Academic Achievement by our Ex-TKGians</strong></h3>
 <img src="/images/Sparkling_Moment/TKGS_Sparkling_Moment.png" style="width:600px;height:850px;"><br> Congratulations to our ex-TKGians on their success!! We are so proud of you!!
