{"message":"Update file: 2021.md","fileName":"2021.md","userId":"819"}

--- a/_tkgs-sparkling-moments/2021.md
+++ b/_tkgs-sparkling-moments/2021.md
@@ -3,13 +3,13 @@ title: "2021"
 permalink: /tkgs-sparkling-moments/moments/2021/
 description: ""
 ---
-![](/images/Sparkling%20Intro.png)
+<img src="/images/Sparkling_Moment/sparkling_intro.png">
 <h3><strong>Victoria Junior College Scholars Featuring our Ex-TKGians</strong></h3>
 <img style="width: 75%;" src="/images/21a.png">
 <p style="text-align: center;">Congratulations to our ex-TKGians on their success!! We are so proud of you!!!</p>
 <h3><strong>TKGS Celebrates 56th National Day on 2021 NDP Virtual Choir!</strong></h3>
-<iframe width="728" height="409" src="https://www.youtube.com/embed/_trSPUd7Zps" title="NDP 2021 Voice of the Nation" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<p>Our TKGS Choir participated and submitted their renditions of &lsquo;The Road Ahead&rsquo; to commemorate the Independence of our Nation. Good Job girls!!</p>
+<iframe width="728" height="409" src="https://www.youtube.com/embed/_trSPUd7Zps" title="NDP 2021 Voice of the Nation" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+<p>Our TKGS Choir participated and submitted their renditions of ‘The Road Ahead’ to commemorate the Independence of our Nation. Good Job girls!!</p>
 <p>Please sit back and enjoy this compilation of beautiful voices!</p>
 <h3><strong>Singapore Polytechnic Outstanding Academic Achievements - Vivien Tan</strong></h3>
 <img style="width: 75%;" src="/images/21b.jpg">
@@ -77,7 +77,7 @@ description: ""
 </td>
 <td style="width: 50%;">
 <div style="text-align: center;">
-<div>Ms Liyana, Nominee for the President&rsquo;s Award</div>
+<div>Ms Liyana, Nominee for the President’s Award</div>
 <div>for Teachers (PATS)</div>
 </div>
 </td>
@@ -85,13 +85,13 @@ description: ""
 </tbody>
 </table>
 <img style="width: 80%;" src="/images/21j.png">
-<p>Staff members who received the MOE Long Service Award, MOE Service Excellence Awards, TKGS Caring Teacher Award, Nominated Outstanding Youth in Education Award, Nominated President&rsquo;s Award for Teacher, posing for a photograph with Ms Chew.</p>
+<p>Staff members who received the MOE Long Service Award, MOE Service Excellence Awards, TKGS Caring Teacher Award, Nominated Outstanding Youth in Education Award, Nominated President’s Award for Teacher, posing for a photograph with Ms Chew.</p>
 <h3><strong>Outstanding A-Level Results - Featuring our Ex-TKGian</strong></h3>
 <img style="width: 75%;" src="/images/21k.jpg">
 <p>We would like to congratulate our former TKGian Charukeshi Karikalan on her outstanding results at the 2020 A-Level examinations. We are so proud of you!!</p>
 <h3><strong>Singapore Polytechnic Scholarship - Featuring our Ex-TKGians</strong></h3>
 <img style="width: 75%;" src="/images/21l.jpg">
-<p>We are proud to announce that our former TKGS students Serena Jacqueelyn Kaur Haqueeqat Singh and Thattaruparambil Manoj Gayathri from 2019 were selected for this year&rsquo;s Singapore Polytechnic Scholarship (Engineering). This award recognizes students with excellent academic achievements, outstanding leadership qualities and significant accomplishments in co-curricular activities. Kudos girls.</p>
+<p>We are proud to announce that our former TKGS students Serena Jacqueelyn Kaur Haqueeqat Singh and Thattaruparambil Manoj Gayathri from 2019 were selected for this year’s Singapore Polytechnic Scholarship (Engineering). This award recognizes students with excellent academic achievements, outstanding leadership qualities and significant accomplishments in co-curricular activities. Kudos girls.</p>
 <h3><strong>2020 GCE O-level Results</strong></h3>
 <img style="width: 75%;" src="/images/21m.jpg">
 <p>Congratulations to the Class of 2020. Please click&nbsp;<a href="https://drive.google.com/file/d/1hCYruTUKWuf_aOafOMtCxSpumG92JIJ-/view" target="_blank" rel="noopener">here</a>&nbsp;to view the slides.</p>
