--- a/_tkgs-sparkling-moments/2023.md
+++ b/_tkgs-sparkling-moments/2023.md
@@ -5,6 +5,19 @@ description: ""
 ---
 <img src="/images/Sparkling_Moment/sparkling_intro.png">
 
+<h3><strong>TKGS collaborates with PUB to lead Geylang River Learning Trail in commemoration of Singapore World Water Day 2023</strong></h3>
+<table style="width:100%">
+	<tbody>
+		<tr>
+			<td style="width:50%"><img src="/images/Sparkling_Moment/2023_pub_sq.png" style="width:250px;height:260px;"></td>
+			<td><img src="/images/Sparkling_Moment/2023_pub_sq.png" style="width:250px;height:260px;"></td>
+		</tr>
+		<tr>
+			<td style="text-align: center;" rowspan="2">TKGS is in our third year of championing water education with PUB. Our girls have benefited much in the process, bringing their classroom lessons on Singapore’s Water Story alive.</td>
+		</tr>
+	</tbody>
+	</table>
+
 <h3><strong>Outstanding Academic Achievement by our Ex-TKGians</strong></h3>
 <img src="/images/Sparkling_Moment/TKGS_Sparkling_Moment.png" style="width:600px;height:850px;"><br> Congratulations to our ex-TKGians on their success!! We are so proud of you!!
 
