{"message":"Update file: 2023.md","fileName":"2023.md","userId":"819"}

--- a/_tkgs-sparkling-moments/2023.md
+++ b/_tkgs-sparkling-moments/2023.md
@@ -12,8 +12,12 @@ description: ""
 			<td style="width:50%"><img src="/images/Sparkling_Moment/2023_pub_sq.png" style="width:250px;height:260px;"></td>
 			<td><img src="/images/Sparkling_Moment/2023_pub_sq.png" style="width:250px;height:260px;"></td>
 		</tr>
+		</tbody>
+	</table>
+	<table style="width:100%">
+	<tbody>
 		<tr>
-			<td style="text-align: center;" rowspan="2">TKGS is in our third year of championing water education with PUB. Our girls have benefited much in the process, bringing their classroom lessons on Singapore’s Water Story alive.</td>
+		 <td style="text-align: center;" rowspan="2">TKGS is in our third year of championing water education with PUB. Our girls have benefited much in the process, bringing their classroom lessons on Singapore’s Water Story alive.</td>
 		</tr>
 	</tbody>
 	</table>
