--- a/_tkgs-sparkling-moments/2023.md
+++ b/_tkgs-sparkling-moments/2023.md
@@ -17,7 +17,7 @@ description: ""
 	<table style="width:100%">
 	<tbody>
 		<tr>
-		 <td style="text-align: center;" rowspan="2">TKGS is in our third year of championing water education with PUB. Our girls have benefited much in the process, bringing their classroom lessons on Singapore’s Water Story alive.</td>
+		 <td rowspan="2">TKGS is in our third year of championing water education with PUB. Our girls have benefited much in the process, bringing their classroom lessons on Singapore’s Water Story alive.</td>
 		</tr>
 	</tbody>
 	</table>
