--- a/_tkgs-sparkling-moments/2023.md
+++ b/_tkgs-sparkling-moments/2023.md
@@ -25,6 +25,11 @@ description: ""
 <h3><strong>Outstanding Academic Achievement by our Ex-TKGians</strong></h3>
 <img src="/images/Sparkling_Moment/TKGS_Sparkling_Moment.png" style="width:600px;height:850px;"><br> Congratulations to our ex-TKGians on their success!! We are so proud of you!!
 
+<h3><strong>Term 1 Closing Video</strong></h3>
+Term 1 has indeed been a fruitful and memorable one culminating in school-wide celebrations of student and staff achievements during hall assembly on the last day of school. Here is a recap of the sparkling moments for Term 1.
+
+<center><iframe allowfullscreen="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" frameborder="0" title="YouTube video player" src="https://www.youtube.com/embed/REf3RZ1xgRY" height="315" width="560"></iframe></center>
+
 <h3><strong>2022 GCE O-level Results</strong></h3>
 <img src="/images/Splash.png" style="width:600px;height:360px;"><br>
 Our heartiest congratulations to the Class of 2022. You have done well and we wish you all the best in your future endeavors. 
