{"message":"Update file: 2023.md","fileName":"2023.md","userId":"819"}

--- a/_tkgs-sparkling-moments/2023.md
+++ b/_tkgs-sparkling-moments/2023.md
@@ -21,6 +21,17 @@ description: ""
 		</tr>
 	</tbody>
 	</table>
+	<table>
+	<tbody>
+		<tr>
+			<td>
+				<img src="/images/Sparkling_Moment/2023_4e5_pub.jpeg" style="width:700px;height:460px;"></td>
+		</tr>
+		<tr>
+			<td>TKGS is in our third year of championing water education with PUB. Our girls have benefited much in the process, bringing their classroom lessons on Singapore’s Water Story alive.</td>
+		</tr>
+	</tbody>
+	</table>
 
 <h3><strong>Outstanding Academic Achievement by our Ex-TKGians</strong></h3>
 <img src="/images/Sparkling_Moment/TKGS_Sparkling_Moment.png" style="width:600px;height:850px;"><br> Congratulations to our ex-TKGians on their success!! We are so proud of you!!
