{"message":"Update file: 2023.md","fileName":"2023.md","userId":"819"}

--- a/_tkgs-sparkling-moments/2023.md
+++ b/_tkgs-sparkling-moments/2023.md
@@ -24,8 +24,7 @@ description: ""
 	<table>
 	<tbody>
 		<tr>
-			<td>
-				<img src="/images/Sparkling_Moment/2023_4e5_pub.jpeg" style="width:700px;height:460px;"></td>
+			<td><img src="/images/Sparkling_Moment/2023_4e5_pub.jpeg" style="width:700px;height:460px;"></td>
 		</tr>
 		<tr>
 			<td>TKGS is in our third year of championing water education with PUB. Our girls have benefited much in the process, bringing their classroom lessons on Singapore’s Water Story alive.</td>
