{"message":"Update file: 2023.md","fileName":"2023.md","userId":"819"}

--- a/_tkgs-sparkling-moments/2023.md
+++ b/_tkgs-sparkling-moments/2023.md
@@ -9,7 +9,7 @@ description: ""
 <table style="width:100%">
 	<tbody>
 		<tr>
-					 <td rowspan="2">TKGS is in our third year of championing water education with PUB. Our girls have benefited much in the process, bringing their classroom lessons on Singapore’s Water Story alive.</td>
+			<td rowspan="2">TKGS is in our third year of championing water education with PUB. Our girls have benefited much in the process, bringing their classroom lessons on Singapore’s Water Story alive.</td>
 		</tr>
 		</tbody>
 	</table>
@@ -17,7 +17,8 @@ description: ""
 	<tbody>
 		<tr>
 			<td style="width:50%"><img src="/images/Sparkling_Moment/2023_pub_sq.png" style="width:250px;height:260px;"></td>
-			<td><img src="/images/Sparkling_Moment/2023_pub_2.jpg" style="width:320px;height:280px;"></td>
+			<td>
+				<img src="/images/Sparkling_Moment/2023_pub_2.jpg" style="width:320px;height:280px;"></td>
 		</tr>
 	</tbody>
 	</table>
@@ -27,7 +28,7 @@ description: ""
 			<td><img src="/images/Sparkling_Moment/2023_4e5_pub.jpeg" style="width:700px;height:460px;"></td>
 		</tr>
 		<tr>
-			<td>TKGS is in our third year of championing water education with PUB. Our girls have benefited much in the process, bringing their classroom lessons on Singapore’s Water Story alive.</td>
+			<td>Building on and building up this partnership, our girls took a leap of faith to design and conduct a Learning Trail for Kong Hwa School and Geylang Methodist School (Primary) students using Geylang River in our backyard as an outdoor classroom. The Primary School students enjoyed the learning journey and learned about the importance of water sustainability. We are indeed happy that our girls are living out our school mission to become lifelong learners and good stewards of knowledge in service to the community and country. </td>
 		</tr>
 	</tbody>
 	</table>
