{"message":"Update file: 2023.md","fileName":"2023.md","userId":"819"}

--- a/_tkgs-sparkling-moments/2023.md
+++ b/_tkgs-sparkling-moments/2023.md
@@ -6,17 +6,17 @@ description: ""
 <img src="/images/Sparkling_Moment/sparkling_intro.png">
 
 <h3><strong>TKGS collaborates with PUB to lead Geylang River Learning Trail in commemoration of Singapore World Water Day 2023</strong></h3>
-<table style="width:100%">
+<table>
 	<tbody>
 		<tr>
 			<td rowspan="2">TKGS is in our third year of championing water education with PUB. Our girls have benefited much in the process, bringing their classroom lessons on Singapore’s Water Story alive.</td>
 		</tr>
 		</tbody>
 	</table>
-	<table style="width:100%">
+	<table>
 	<tbody>
 		<tr>
-			<td style="width:50%"><img src="/images/Sparkling_Moment/2023_pub_sq.png" style="width:250px;height:260px;"></td>
+			<td><img src="/images/Sparkling_Moment/2023_pub_sq.png" style="width:250px;height:260px;"></td>
 			<td>
 				<img src="/images/Sparkling_Moment/2023_pub_2.jpg" style="width:320px;height:280px;"></td>
 		</tr>
