{"message":"Update file: 2023.md","fileName":"2023.md","userId":"819"}

--- a/_tkgs-sparkling-moments/2023.md
+++ b/_tkgs-sparkling-moments/2023.md
@@ -17,8 +17,7 @@ description: ""
 	<tbody>
 		<tr>
 			<td><img src="/images/Sparkling_Moment/2023_pub_sq.png" style="width:250px;height:260px;"></td>
-			<td>
-				<img src="/images/Sparkling_Moment/2023_pub_2.jpg" style="width:320px;height:280px;"></td>
+			<td><img src="/images/Sparkling_Moment/2023_pub_2.jpg" style="width:320px;height:280px;"></td>
 		</tr>
 	</tbody>
 	</table>
