{"message":"Update file: 2023.md","fileName":"2023.md","userId":"819"}

--- a/_tkgs-sparkling-moments/2023.md
+++ b/_tkgs-sparkling-moments/2023.md
@@ -11,7 +11,7 @@ description: ""
 <h3><strong>Term 1 Closing Video</strong></h3>
 Term 1 has indeed been a fruitful and memorable one culminating in school-wide celebrations of student and staff achievements during hall assembly on the last day of school. Here is a recap of the sparkling moments for Term 1.
 
-<iframe allowfullscreen="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" frameborder="0" title="YouTube video player" src="https://www.youtube.com/embed/REf3RZ1xgRY" align="center" height="315" width="560"></iframe>
+<center><iframe allowfullscreen="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" frameborder="0" title="YouTube video player" src="https://www.youtube.com/embed/REf3RZ1xgRY" height="315" width="560"></iframe></center>
 
 <h3><strong>2022 GCE O-level Results</strong></h3>
 <img src="/images/Splash.png" style="width:600px;height:360px;"><br>
