--- a/_tkgs-sparkling-moments/2023.md
+++ b/_tkgs-sparkling-moments/2023.md
@@ -5,6 +5,17 @@ description: ""
 ---
 <img src="/images/Sparkling_Moment/sparkling_intro.png">
 
+<h3><strong>Outstanding Academic Achievements</strong></h3>
+<table>
+	<tbody>
+		<tr>
+			<td style="width: 50%;"><img src="/images/Sparkling_Moment/2023_tjc.png"></td>
+<td style="width:50%;"><img src="/images/Sparkling_Moment/stem_sp.png">
+		</td>
+		</tr>
+	</tbody>
+	</table>
+
 <h3><strong>TKGS collaborates with PUB to lead Geylang River Learning Trail in commemoration of Singapore World Water Day 2023</strong></h3>
 <img src="/images/Sparkling_Moment/pub_top.png">
 TKGS is in our third year of championing water education with PUB. Our girls have benefited much in the process, bringing their classroom lessons on Singapore’s Water Story alive.<br>
