--- a/_tkgs-sparkling-moments/2023.md
+++ b/_tkgs-sparkling-moments/2023.md
@@ -25,7 +25,7 @@ Building on and building up this partnership, our girls took a leap of faith to 
 We are indeed happy that our girls are living out our school mission to become lifelong learners and good stewards of knowledge in service to the community and country.
 
 <h3><strong>Outstanding Academic Achievement by our Ex-TKGians</strong></h3>
-<img src="/images/Sparkling_Moment/TKGS_Sparkling_Moment.png" style="width:600px;height:850px;"><br> Congratulations to our ex-TKGians on their success!! We are so proud of you!!
+<img src="/images/Sparkling_Moment/TKGS_Sparkling_Moment.png"><br> Congratulations to our ex-TKGians on their success!! We are so proud of you!!
 
 <h3><strong>Term 1 Closing Video</strong></h3>
 Term 1 has indeed been a fruitful and memorable one culminating in school-wide celebrations of student and staff achievements during hall assembly on the last day of school. Here is a recap of the sparkling moments for Term 1.
