{"message":"Update file: 2023.md","fileName":"2023.md","userId":"819"}

--- a/_tkgs-sparkling-moments/2023.md
+++ b/_tkgs-sparkling-moments/2023.md
@@ -5,6 +5,19 @@ description: ""
 ---
 <img src="/images/Sparkling_Moment/sparkling_intro.png">
 
+<h3><strong>Sparkling Moments for 70th Speech and Prize Giving Ceremony</strong></h3>
+The school’s 70th Speech &amp; Prize-Giving Ceremony was held from 13 to 15 April 2023. The theme is Aspire to Greater Things. It is also the Year Theme for 2023.<br><br>
+<img src="/images/Sparkling_Moment/2023_speechday/speech_day_staff_combine.png">
+Staff members receiving MOE Long Service Awards, Nominee for Outstanding Youth In Education Award and President’s Award for Teachers and MOE Service Excellence Award in the lead-up ceremony held earlier in the week prior to Speech and Prize Giving Ceremony.
+<br><br>
+<img src="/images/Sparkling_Moment/2023_speechday/nets_ceo_mr_chan.jpg">
+Welcoming our Guest of Honour, Mr Lawrence Chan, Group Chief Executive Officer, NETS.<br><br>
+<img src="/images/Sparkling_Moment/2023_speechday/p_ms_chew.jpg">
+Principal’s report by our Principal, Ms Chew Ing Lim.<br><br>
+<img src="/images/Sparkling_Moment/2023_speechday/mr_chan_address.jpg">
+Guest of Honour address by Mr Lawrence Chan, Group Chief Executive Officer, NETS<br><br>
+<img src="/images/Sparkling_Moment/2023_speechday/speech_day_students_combine.png">Awards presentation to our alumni from Class of 2022<br><br>
+<img src="/images/Sparkling_Moment/2023_speechday/speech_day_cca_combine.png">Concert performances by TKGS Dance Club, String Ensemble and Choir. <br>
 <h3><strong>Outstanding Academic Achievements</strong></h3>
 <table>
 	<tbody>
