{"message":"Update file: 2023.md","fileName":"2023.md","userId":"819"}

--- a/_tkgs-sparkling-moments/2023.md
+++ b/_tkgs-sparkling-moments/2023.md
@@ -10,11 +10,17 @@ The Tanjong Katong Girls School Symphonic Band had the honor of being invited to
 <table>
 	<tbody>
 		<tr>
-			<td><img src="/images/Sparkling_Moment/2023_Istana/istapnp.jpg"></td>
-			<td><img src="/images/Sparkling_Moment/2023_Istana/istapnp.jpg"></td>
+			<td><img src="/images/Sparkling_Moment/2023_Istana/istapnp.jpg">Welcoming Mdm President Halimah Yacob</td>
+			<td><img src="/images/Sparkling_Moment/2023_Istana/istagroup.jpg"> Precious photo moment taken with Mdm President Halimah Yacob</td>
 		</tr>
 	</tbody>
 	</table>
+<img src="/images/Sparkling_Moment/2023_Istana/istatop.jpg">The band hand-picked a fine selection of tunes by local composers, as well as familiar tunes such as ‘Viva La Vida’, ‘Sway’, ‘Aladdin’ where the audience clapped and sang along to.<br><br>
+<img src="/images/Sparkling_Moment/2023_Istana/isamid.jpg">The performance by the TKGS Symphonic band at the main Istana tentage drew a large, enthusiastic crowd.<br><br>
+<img src="/images/Sparkling_Moment/2023_Istana/istamidlow.jpg">
+<img src="/images/Sparkling_Moment/2023_Istana/istalow.jpg">The band members played their hearts out to move the audience.<br><br>
+Despite the sweltering heat that day, the band was undeterred and excited to share their passion for music with the crowd. Exuding with pride, TKGS symphonic band was well-received by Mdm President Halimah and the audience, entertaining and leaving lasting impressions in everyone’s hearts.
+	<img src="/images/Sparkling_Moment/2023_Istana/lowlow.jpg">Mdm President Halimah Yacob enjoying the performance put up by the TKGS Symphonic band.
 
 <h3><strong>Sparkling Moments for 70th Speech and Prize Giving Ceremony</strong></h3><br>
 The school’s 70th Speech &amp; Prize-Giving Ceremony was held from 13 to 15 April 2023. The theme is Aspire to Greater Things. It is also the Year Theme for 2023.<br>
