{"message":"Update file: 2023.md","fileName":"2023.md","userId":"819"}

--- a/_tkgs-sparkling-moments/2023.md
+++ b/_tkgs-sparkling-moments/2023.md
@@ -5,6 +5,11 @@ description: ""
 ---
 <img src="/images/Sparkling_Moment/sparkling_intro.png">
 
+<h3><strong>Term 2 Closing Video</strong></h3>
+We closed Term 2 with yet another video. Here is a recap of the sparkling moments for the Term.
+
+<iframe allowfullscreen="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" frameborder="0" title="YouTube video player" src="https://www.youtube.com/embed/T2jllENkzJI" height="315" width="560"></iframe>
+
 <h3><strong>Sparkling Moments for TKGS Symphonic Band Istana Performance (01 May 2023)</strong></h3>
 The Tanjong Katong Girls School Symphonic Band had the honor of being invited to perform at the Istana Open house in celebrations of Labour Day and Hari Raya Puasa on 01 May 2023. This gave the band a once-in-a-lifetime opportunity to perform at the Istana grounds for Mdm President Halimah Yacob, who is an alumnus of TKGS. This is indeed a significant event to commemorate the school’s 70th Anniversary.<br><br>
 <table>
