{"message":"Update file: 2023.md","fileName":"2023.md","userId":"819"}

--- a/_tkgs-sparkling-moments/2023.md
+++ b/_tkgs-sparkling-moments/2023.md
@@ -5,6 +5,20 @@ description: ""
 ---
 <img src="/images/Sparkling_Moment/sparkling_intro.png">
 
+<h3><strong>SYF Youth Station Project 2023 – Thawdar Hnin Htet Kaylen</strong></h3>
+
+<a href="https://raw.githubusercontent.com/isomerpages/moe-tkgs/staging/images/Sparkling_Moment/2023/SYF_Thawdar/mainpic.png"><img src="/images/Sparkling_Moment/2023/SYF_Thawdar/mainpic.png"></a>
+
+The Singapore Youth Festival (SYF) is a series of events organised by MOE for students to showcase their talents, artistic expression and creative voice. The Youth Station Project is a SYF platform that is dedicated to showcasing student’s original creative work in music. Through this platform, student-musicians are provided with opportunities to further develop their interest and skills in songwriting, music arranging, production and performing. 
+
+This year, Thawdar Hnin Htet Kaylen (2E6) represented TKGS with her original song “Letting it Slip”. We are proud to announce that her song was awarded Top 10 song from a total of 49 songs submitted by schools for the lower secondary category. Kaylen presented her song solo at the “Youth Station Live!” SYF Celebration event at the Esplanade Concourse over the Youth Day weekend to screams of delight and support from the public. 
+
+Many thanks to the students and staff who supported and encouraged Kaylen in her journey. Special thanks go to Mr Syamil for recording Kaylen’s song for submission.  
+
+<a href="https://raw.githubusercontent.com/isomerpages/moe-tkgs/staging/images/Sparkling_Moment/2023/SYF_Thawdar/subpic1.png"><img src="/images/Sparkling_Moment/2023/SYF_Thawdar/smpic1.png"></a>Kaylen - Live at the Esplanade Concourse
+
+<a href="https://raw.githubusercontent.com/isomerpages/moe-tkgs/staging/images/Sparkling_Moment/2023/SYF_Thawdar/subpic2.png"><img src="/images/Sparkling_Moment/2023/SYF_Thawdar/smpic2.png"></a>Kaylen - Live at the Esplanade Concourse			
+
 <h3><strong>Term 2 Closing Video</strong></h3>
 We closed Term 2 with yet another series of exciting school events. Here is a recap of the sparkling moments in Term 2.
 
