{"message":"Update file: 2023.md","fileName":"2023.md","userId":"819"}

--- a/_tkgs-sparkling-moments/2023.md
+++ b/_tkgs-sparkling-moments/2023.md
@@ -15,12 +15,26 @@ This year, Thawdar Hnin Htet Kaylen (2E6) represented TKGS with her original son
 
 Many thanks to the students and staff who supported and encouraged Kaylen in her journey. Special thanks go to Mr Syamil for recording Kaylen’s song for submission.  
 
+<table>
+<tbody>
+	<tr>
+		<td style="text-align: center;">
 <a href="https://raw.githubusercontent.com/isomerpages/moe-tkgs/staging/images/Sparkling_Moment/2023/SYF_Thawdar/subpic1.png"><img src="/images/Sparkling_Moment/2023/SYF_Thawdar/smpic1.png"></a>Kaylen - Live at the Esplanade Concourse.
-
-<a href="https://raw.githubusercontent.com/isomerpages/moe-tkgs/staging/images/Sparkling_Moment/2023/SYF_Thawdar/subpic2.png"><img src="/images/Sparkling_Moment/2023/SYF_Thawdar/smpic2.png"></a>SYF Youth Station songwriters and performers after Esplanade performance.
-
-<a href="https://raw.githubusercontent.com/isomerpages/moe-tkgs/staging/images/Sparkling_Moment/2023/SYF_Thawdar/subpic3.png"><img src="/images/Sparkling_Moment/2023/SYF_Thawdar/smpic3.png"></a>Recording session assisted by Mr Syamil.			
-
+		</td>
+		<td style="text-align: center;">
+		<a href="https://raw.githubusercontent.com/isomerpages/moe-tkgs/staging/images/Sparkling_Moment/2023/SYF_Thawdar/subpic2.png"><img src="/images/Sparkling_Moment/2023/SYF_Thawdar/smpic2.png"></a>SYF Youth Station songwriters and performers after Esplanade performance.
+		</td>
+	</tr>
+	<tr>
+		<td style="text-align: center;" colspan="2">
+  <a href="https://raw.githubusercontent.com/isomerpages/moe-tkgs/staging/images/Sparkling_Moment/2023/SYF_Thawdar/subpic3.png">
+    <img style="width: 50%;" src="/images/Sparkling_Moment/2023/SYF_Thawdar/smpic3.png">
+  </a>
+  Recording session assisted by Mr Syamil.
+</td>
+	</tr></tbody>
+	</table>
+	
 <h3><strong>Term 2 Closing Video</strong></h3>
 We closed Term 2 with yet another series of exciting school events. Here is a recap of the sparkling moments in Term 2.
 
