{"message":"Update file: 2023.md","fileName":"2023.md","userId":"819"}

--- a/_tkgs-sparkling-moments/2023.md
+++ b/_tkgs-sparkling-moments/2023.md
@@ -32,7 +32,8 @@ Many thanks to the students and staff who supported and encouraged Kaylen in her
   </a>
   Recording session assisted by Mr Syamil.
 </td>
-	</tr></tbody>
+	</tr>
+	</tbody>
 	</table>
 	
 <h3><strong>Term 2 Closing Video</strong></h3>
