{"message":"Update file: 2023.md","fileName":"2023.md","userId":"819"}

--- a/_tkgs-sparkling-moments/2023.md
+++ b/_tkgs-sparkling-moments/2023.md
@@ -5,6 +5,13 @@ description: ""
 ---
 <img src="/images/Sparkling_Moment/sparkling_intro.png">
 
+<h3><strong>Outstanding Academic Achievements</strong></h3>
+
+<img src="/images/Sparkling_Moment/2023/SP_grads/combine.png">
+
+Congratulations to our two exceptional ex-TKGians on their remarkable achievements! Their dedication, passion, and hard work have paid off, inspiring us all. Their success is a testament to our school's excellence. Best wishes for a bright future!
+
+
 <h3><strong>SYF Youth Station Project 2023 – Thawdar Hnin Htet Kaylen</strong></h3>
 
 <a href="https://raw.githubusercontent.com/isomerpages/moe-tkgs/staging/images/Sparkling_Moment/2023/SYF_Thawdar/mainpic.png"><img src="/images/Sparkling_Moment/2023/SYF_Thawdar/mainpic.png"></a>
