--- a/_tkgs-sparkling-moments/2023.md
+++ b/_tkgs-sparkling-moments/2023.md
@@ -9,7 +9,7 @@ description: ""
 
 <img src="/images/Sparkling_Moment/2023/SP_grads/combine.png">
 
-Congratulations to our two exceptional ex-TKGians on their remarkable achievements! Their dedication, passion, and hard work have paid off, inspiring us all. Their success is a testament to our school's excellence. Best wishes for a bright future!
+Congratulations to our ex-TKGians on their remarkable achievements! Their dedication, passion, and hard work have paid off, inspiring us all. Their success is a testament to our school's excellence. Best wishes for a bright future!
 
 
 <h3><strong>SYF Youth Station Project 2023 – Thawdar Hnin Htet Kaylen</strong></h3>
