--- a/_tkgs-sparkling-moments/2023.md
+++ b/_tkgs-sparkling-moments/2023.md
@@ -21,15 +21,9 @@ This year, we are delighted to announce the recognition of two teams of TKGians 
 
 In the Choral Speaking category, our dynamic TKGians received the Commendation Award! They were acknowledged for their adept use of facial expressions and intonation in their presentation of the poem "You Can't Be That" by Brian Patten. The commitment and talent of the following students have made TKGS proud: Fashila Hisana Siregar, Nur Arisha Binti Mohamed Radzif, Sophia Adriana Tng Binte Rohaizad, Lee Jia En Jeslyn, Thawdar Hniny Htet Kaylen, and Vinodh Sherin Jovy.
 
-<table>
-	<tbody>
-		<tr>
-			<td><iframe allowfullscreen="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" frameborder="0" title="YouTube video player" src="https://www.youtube.com/embed/MdVnbak9nfU?si=6hNNu15ey2b-diCG" height="315" width="560"></iframe></td>
-			<td><iframe allowfullscreen="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" frameborder="0" title="YouTube video player" src="https://www.youtube.com/embed/HyCk2CtBvYE?si=iVv5Upd0pMm2wm6x" height="315" width="560"></iframe>
-			</td>
-		</tr>
-	</tbody>
-	</table>
+<iframe allowfullscreen="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" frameborder="0" title="YouTube video player" src="https://www.youtube.com/embed/MdVnbak9nfU?si=6hNNu15ey2b-diCG" height="315" width="560"></iframe>
+<br>
+<iframe allowfullscreen="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" frameborder="0" title="YouTube video player" src="https://www.youtube.com/embed/HyCk2CtBvYE?si=iVv5Upd0pMm2wm6x" height="315" width="560"></iframe>
 
 <h3><strong>Outstanding Academic Achievements</strong></h3>
 
