{"message":"Update file: 2023.md","fileName":"2023.md","userId":"819"}

--- a/_tkgs-sparkling-moments/2023.md
+++ b/_tkgs-sparkling-moments/2023.md
@@ -19,7 +19,7 @@ The National Schools Literature Festival (NSLF) is a literary festival in Singap
 
 This year, we are delighted to announce the recognition of two teams of TKGians for their creativity and effort! In the Book Trailer category, our students shone brilliantly, securing the Top 10 Schools Award. This recognition highlights the innovative prowess of the following students: Alexis Leow En Xuan, Clesias Yeo Yunqi, Erica Lee, Olivia Yeoh Yu Tong, Olivia Lu, and V Aishvarya. Their engaging trailer was acclaimed for its effective use of camera angles in presenting the book "Counting by 7s" by Holly Goldberg Sloan. They also clinched the Popular Choice Award based on real-time voting! 
 
-In the Choral Speaking category, our dynamic TKGians received the Commendation Award! They were acknowledged for their adept use of facial expressions and intonation in their presentation of the poem "You Can't Be That" by Brian Patten. The commitment and talent of the following students have made TKGS proud: Fashila Hisana Siregar, Nur Arisha Binti Mohamed Radzif, Sophia Adriana Tng Binte Rohaizad, Lee Jia En Jeslyn, Thawdar Hniny Htet Kaylen, and Vinodh Sherin Jovy.
+In the Choral Speaking category, our dynamic TKGians received the Commendation Award! They were acknowledged for their adept use of facial expressions and intonation in their presentation of the poem "You Can't Be That" by Brian Patten. The commitment and talent of the following students have made TKGS proud: Fashila Hisana Siregar, Nur Arisha Binti Mohamed Radzif, Sophia Adriana Tng Binte Rohaizad, Lee Jia En Jeslyn, Thawdar Hnin Htet Kaylen, and Vinodh Sherin Jovy.
 
 <iframe allowfullscreen="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" frameborder="0" title="YouTube video player" src="https://www.youtube.com/embed/MdVnbak9nfU?si=6hNNu15ey2b-diCG" height="315" width="560"></iframe>
 
