{"message":"Update file: 2023.md","fileName":"2023.md","userId":"819"}

--- a/_tkgs-sparkling-moments/2023.md
+++ b/_tkgs-sparkling-moments/2023.md
@@ -5,6 +5,11 @@ description: ""
 ---
 <img src="/images/Sparkling_Moment/sparkling_intro.png">
 
+<h3><strong>Term 3 Closing Video</strong></h3>
+As Term 3 comes to a close, we reflect on a series of thrilling school events that have unfolded. Join us for a recap of the memorable highlights from this term.
+
+<center><iframe allowfullscreen="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" frameborder="0" title="YouTube video player" src="https://www.youtube.com/embed/Cqa6FaWOCno?si=VKYtb9pvd7AV9M1n" height="315" width="560"></iframe></center>
+
 <h3><strong>National Schools Literature Festival</strong></h3>
 <table>
 	<tbody>
