--- a/_tkgs-sparkling-moments/2023.md
+++ b/_tkgs-sparkling-moments/2023.md
@@ -13,8 +13,16 @@ A copy of the book can be downloaded <a href="https://drive.google.com/file/d/1b
 <table>
 	<tbody>
 	<tr>
-		<td><a href="https://raw.githubusercontent.com/isomerpages/moe-tkgs/staging/images/Sparkling_Moment/2023/Literature_Festival/updated_picture1.png"><img src="/images/Sparkling_Moment/2023/Literature_Festival/updated_picture1.png"></a></td>
-		<td><a href="https://raw.githubusercontent.com/isomerpages/moe-tkgs/staging/images/Sparkling_Moment/2023/Literature_Festival/picture2.png"><img src="/images/Sparkling_Moment/2023/Literature_Festival/picture2.png"></a></td>
+		<td><a href="/images/Sparkling_Moment/2023/Write_for_kindness/picture1.png"><img src="/images/Sparkling_Moment/2023/Write_for_kindness/picture1sm.png"></a></td>
+		<td><a href="/images/Sparkling_Moment/2023/Write_for_kindness/picture1.png"><img src="/images/Sparkling_Moment/2023/Write_for_kindness/picture1sm.png"></a></td>
+		</tr>
+		<tr>
+		<td><a href="/images/Sparkling_Moment/2023/Write_for_kindness/picture1.png"><img src="/images/Sparkling_Moment/2023/Write_for_kindness/picture1sm.png"></a></td>
+		<td><a href="/images/Sparkling_Moment/2023/Write_for_kindness/picture1.png"><img src="/images/Sparkling_Moment/2023/Write_for_kindness/picture1sm.png"></a></td>
+		</tr>
+		<tr>
+		<td><a href="/images/Sparkling_Moment/2023/Write_for_kindness/picture1.png"><img src="/images/Sparkling_Moment/2023/Write_for_kindness/picture1sm.png"></a></td>
+		<td><a href="/images/Sparkling_Moment/2023/Write_for_kindness/picture1.png"><img src="/images/Sparkling_Moment/2023/Write_for_kindness/picture1sm.png"></a></td>
 		</tr>
 	</tbody>
 	</table>
