{"message":"Update file: 2023.md","fileName":"2023.md","userId":"819"}

--- a/_tkgs-sparkling-moments/2023.md
+++ b/_tkgs-sparkling-moments/2023.md
@@ -6,6 +6,7 @@ description: ""
 <img src="/images/Sparkling_Moment/sparkling_intro.png">
 
 <h3><strong>Write For Kindness Story</strong></h3>
+<center><img src="/images/Sparkling_Moment/2023/Write_for_kindness/write_for_kindness_intro.png"></center>
 Write for Kindness is an annual writing competition organised by the Singapore Kindness Movement. It aims to give teenagers a platform to inculcate the value of kindness in young children through writing books or poems. This year, a team of 6 students from TKGS participated in the competition and came in First in the category of “Story Writing and Illustration Competition”. 
 
 A copy of the book can be downloaded <a href="https://drive.google.com/file/d/1bOWJciZKIe3gS9zBeFUmMnv5zY_e3xxt/view?usp=sharing" target="_blank" rel="noopener">here</a>. 
