{"message":"Update file: 2023.md","fileName":"2023.md","userId":"819"}

--- a/_tkgs-sparkling-moments/2023.md
+++ b/_tkgs-sparkling-moments/2023.md
@@ -5,6 +5,35 @@ description: ""
 ---
 <img src="/images/Sparkling_Moment/sparkling_intro.png">
 
+<h3><strong>NLB Prove It! Contest 2023</strong></h3>
+<center><img src="/images/Sparkling_Moment/2023/Nlb_prove_it/main_sm.png"></center>
+A team of four students from the Library Board participated in the <u>NLB Prove It! Contest 2023</u> and was awarded <u>Silver</u> for their essay entry, “Social Media usage among teenagers: Positive or negative?”. In relation to this, the team also did their own survey as part of their research and presented an Advocacy Sharing on Information Literacy during a morning assembly in July.
+
+Organized by the NLB, the contest aims to equip students with news and information literacy (IL) skills, along with instilling the confidence to become effective ambassadors of IL skills in their schools and community.
+
+Open to lower secondary students, teams can choose to either write or produce an investigative journalism report based on a selection of topics.
+
+<u>The team</u> consists of:<br>
+Karis Koh 2E6<br>
+Lee Rui En 2E6<br>
+Lim Chia Xuan, Claire 2E6<br>
+Syarafana Faqihah Binte Khairullah 1E4<br>
+Congratulations to the team for all their hard work! 
+
+<table>
+	<tbody>
+	<tr>
+		<td><a href="/images/Sparkling_Moment/2023/Nlb_prove_it/pic1_big.png"><img src="/images/Sparkling_Moment/2023/Nlb_prove_it/pic1_sm.png"></a></td>
+		<td><a href="/images/Sparkling_Moment/2023/Nlb_prove_it/pic2_big.png"><img src="/images/Sparkling_Moment/2023/Nlb_prove_it/pic2_sm.png"></a></td>
+		</tr>
+		<tr>
+		<td><a href="/images/Sparkling_Moment/2023/Nlb_prove_it/pic3_big.png"><img src="/images/Sparkling_Moment/2023/Nlb_prove_it/pic3_sm.png"></a></td>
+		<td><a href="/images/Sparkling_Moment/2023/Nlb_prove_it/pic4_big.png"><img src="/images/Sparkling_Moment/2023/Nlb_prove_it/pic4_sm.png"></a></td>
+		</tr>
+	</tbody>
+	</table>
+
+
 <h3><strong>Write For Kindness Story</strong></h3>
 <center><img src="/images/Sparkling_Moment/2023/Write_for_kindness/write_for_kindness_intro.png"></center>
 Write for Kindness is an annual writing competition organised by the Singapore Kindness Movement. It aims to give teenagers a platform to inculcate the value of kindness in young children through writing books or poems. This year, a team of 6 students from TKGS participated in the competition and came in First in the category of “Story Writing and Illustration Competition”. 
