{"message":"Update file: 2023.md","fileName":"2023.md","userId":"819"}

--- a/_tkgs-sparkling-moments/2023.md
+++ b/_tkgs-sparkling-moments/2023.md
@@ -5,6 +5,12 @@ description: ""
 ---
 <img src="/images/Sparkling_Moment/sparkling_intro.png">
 
+<h3><strong>Term 4 Closing Video</strong></h3>
+Capping off the final term of the year, we are delighted to unveil a video that captures the pinnacle moments from both the year and term 4. Experience these cherished highlights anew!
+
+<center><iframe allowfullscreen="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" frameborder="0" title="YouTube video player" src="https://www.youtube.com/embed/kVCKhcaB8qQ?si=nWG9DPwbR31I97Gg" height="315" width="560"></iframe></center>
+
+
 <h3><strong>NLB Prove It! Contest 2023</strong></h3>
 <center><img src="/images/Sparkling_Moment/2023/Nlb_prove_it/main_sm.png"></center>
 A team of four students from the Library Board participated in the <u>NLB Prove It! Contest 2023</u> and was awarded <u>Silver</u> for their essay entry, “Social Media usage among teenagers: Positive or negative?”. In relation to this, the team also did their own survey as part of their research and presented an Advocacy Sharing on Information Literacy during a morning assembly in July.
