{"message":"Update file: 2024.md","userId":"819","fileName":"2024.md"}

--- a/_tkgs-sparkling-moments/2024.md
+++ b/_tkgs-sparkling-moments/2024.md
@@ -4,3 +4,9 @@ permalink: /tkgs-sparkling-moments/2024/
 variant: markdown
 description: ""
 ---
+
+
+
+Congratulations to our students on collecting their O-Level results! They put in their best and we are immensely proud of their achievements. We would like to wish them all the best in your exciting future endeavors. 
+
+Join us in celebrating their success by viewing the slides.
