--- a/_tkgs-sparkling-moments/2024.md
+++ b/_tkgs-sparkling-moments/2024.md
@@ -6,21 +6,7 @@ description: ""
 ---
 <img src="/images/Sparkling_Moment/sparkling_intro.png">
 
-<h3><strong>2023 GCE O-Level Results</strong></h3>
+<h3><strong>RELEASE OF GCE O LEVEL RESULTS 2023</strong></h3>
+TKGS is proud of the outstanding performance of the Class of 2023. The cohort achieved quality <br>O-level grades across a wide range of academic subjects which attests to the academic tenacity and growth mindset demonstrated throughout their journey in TKGS. Beyond academic achievements, the Class of 2023 has demonstrated strength and resilience to rise above their challenges, and we celebrate the tremendous growth of each TKGian in becoming a Gracious Woman, Inquisitive Learner and Servant Leader.
 
-
-Congratulations to our students on collecting their O-Level results! They put in their best and we are immensely proud of their achievements. We would like to wish them all the best in your exciting future endeavors. 
-
-Join us in celebrating their success by viewing the <a href="https://drive.google.com/file/d/1bOWJciZKIe3gS9zBeFUmMnv5zY_e3xxt/view?usp=sharing" target="_blank" rel="noopener">slides</a>.
-
----
-
-It is with pride and joy that we come together to celebrate the Class of 2023 Sec 4 students. Today marks a significant milestone in their educational journey as they collect their O-Level results.
-
-To our exceptional students, congratulations on your remarkable achievements! Your dedication, hard work, and unwavering commitment have brought you to this moment of success. We have witnessed your growth, resilience, and determination, and we are confident that you will continue to shine brightly in all your future endeavors.
-
-We would also like to extend our heartfelt gratitude to the parents, guardians, and friends who have journeyed with us to support our students throughout their educational journey. Your unwavering encouragement and guidance have played a crucial role in their success. Thank you for joining us in celebrating this special day.
-
-Congratulations once again, and may your journey ahead be filled with even greater achievements and moments of joy.
-
-Click <a href="https://drive.google.com/file/d/1bOWJciZKIe3gS9zBeFUmMnv5zY_e3xxt/view?usp=sharing" target="_blank" rel="noopener">here</a> to view the presentation slides from the ceremony.
+Click <a href="https://drive.google.com/file/d/1xKtwByH8vnDGZKfGSIiHA3vH_BuOlQHu/view?usp=drive_link" target="_blank" rel="noopener">here </a>to view the slides.
