--- a/_tkgs-sparkling-moments/2024.md
+++ b/_tkgs-sparkling-moments/2024.md
@@ -6,8 +6,26 @@ description: ""
 ---
 <img src="/images/Sparkling_Moment/sparkling_intro.png">
 
+<h3><strong>Total Defence Day 2024</strong></h3>
+<center><a href="/images/Sparkling_Moment/2024/TDD_cover_pic.jpg"><img src="/images/Sparkling_Moment/2024/TDD_cover_pic_big.jpg"></a></center>
+Our school participated in Singapore’s inaugural Total Defence Exercise. TKGS was one of forty schools selected for the Food Resilience Experience. To simulate food disruption, all canteen stalls were closed on Total Defence Day. Students and staff were only able to eat food packs prepared by Singapore Food Agency for lunch. This experience emphasised the importance of food security, being adaptable and resilient.<br>
+<table>
+	<tbody>
+	<tr>
+		<td style="text-align: center;"><a href="/images/Sparkling_Moment/2024/TDD_lunch.jpg"><img src="/images/Sparkling_Moment/2024/TDD_lunch_sm.jpg"></a></td>
+		<td style="text-align: center;"><a href="/images/Sparkling_Moment/2024/TDD_teacher_student.jpg"><img src="/images/Sparkling_Moment/2024/TDD_teacher_student__sm.jpg"></a></td>
+		</tr><tr>
+		<td style="text-align: center;"><a href="/images/Sparkling_Moment/2024/TDD_firemen.jpg"><img src="/images/Sparkling_Moment/2024/TDD_firemen_sm_2.jpg"></a></td>
+		<td style="text-align: center;"><a href="/images/Sparkling_Moment/2024/TDD_Police.jpg"><img src="/images/Sparkling_Moment/2024/TDD_police_sm.jpg"></a></td>
+		</tr>
+	</tbody>
+	</table>
+Besides the Food Resilience Experience, our students and staff also learned more about how we can contribute to the defence of Singapore through various enriching activities. A big thank you to our uniformed groups and the officers from the Singapore Police Force and Civil Defence Force for sharing your insights with us!
+
+
 <h3><strong>RELEASE OF GCE O LEVEL RESULTS 2023</strong></h3>
 <center><img src="/images/Sparkling_Moment/2024/cover.png"></center>
 TKGS is proud of the outstanding performance of the Class of 2023. The cohort achieved quality <br>O-level grades across a wide range of academic subjects which attests to the academic tenacity and growth mindset demonstrated throughout their journey in TKGS. Beyond academic achievements, the Class of 2023 has demonstrated strength and resilience to rise above their challenges, and we celebrate the tremendous growth of each TKGian in becoming a Gracious Woman, Inquisitive Learner and Servant Leader.
 
 Click <a href="https://drive.google.com/file/d/1xKtwByH8vnDGZKfGSIiHA3vH_BuOlQHu/view?usp=drive_link" target="_blank" rel="noopener">here </a>to view the slides.
+
