--- a/_tkgs-sparkling-moments/2024.md
+++ b/_tkgs-sparkling-moments/2024.md
@@ -12,11 +12,11 @@ Our school participated in Singapore’s inaugural Total Defence Exercise. TKGS 
 <table>
 	<tbody>
 	<tr>
-		<td style="text-align: center;"><a href="/images/Sparkling_Moment/2024/TDD_lunch.jpg"><img src="/images/Sparkling_Moment/2024/TDD_lunch_sm.jpg"></a></td>
-		<td style="text-align: center;"><a href="/images/Sparkling_Moment/2024/TDD_teacher_student.jpg"><img src="/images/Sparkling_Moment/2024/TDD_teacher_student__sm.jpg"></a></td>
+		<td style="text-align: center;"><a href="/images/Sparkling_Moment/2024/TDD_lunch.jpg" target="_blank" rel="noopener"><img src="/images/Sparkling_Moment/2024/TDD_lunch_sm.jpg"></a></td>
+		<td style="text-align: center;"><a href="/images/Sparkling_Moment/2024/TDD_teacher_student.jpg" target="_blank" rel="noopener"><img src="/images/Sparkling_Moment/2024/TDD_teacher_student__sm.jpg"></a></td>
 		</tr><tr>
-		<td style="text-align: center;"><a href="/images/Sparkling_Moment/2024/TDD_firemen.jpg"><img src="/images/Sparkling_Moment/2024/TDD_firemen_sm_2.jpg"></a></td>
-		<td style="text-align: center;"><a href="/images/Sparkling_Moment/2024/TDD_Police.jpg"><img src="/images/Sparkling_Moment/2024/TDD_police_sm.jpg"></a></td>
+		<td style="text-align: center;"><a href="/images/Sparkling_Moment/2024/TDD_firemen.jpg" target="_blank" rel="noopener"><img src="/images/Sparkling_Moment/2024/TDD_firemen_sm_2.jpg"></a></td>
+		<td style="text-align: center;"><a href="/images/Sparkling_Moment/2024/TDD_Police.jpg" target="_blank" rel="noopener"><img src="/images/Sparkling_Moment/2024/TDD_police_sm.jpg"></a></td>
 		</tr>
 	</tbody>
 	</table>
@@ -28,4 +28,3 @@ Besides the Food Resilience Experience, our students and staff also learned more
 TKGS is proud of the outstanding performance of the Class of 2023. The cohort achieved quality <br>O-level grades across a wide range of academic subjects which attests to the academic tenacity and growth mindset demonstrated throughout their journey in TKGS. Beyond academic achievements, the Class of 2023 has demonstrated strength and resilience to rise above their challenges, and we celebrate the tremendous growth of each TKGian in becoming a Gracious Woman, Inquisitive Learner and Servant Leader.
 
 Click <a href="https://drive.google.com/file/d/1xKtwByH8vnDGZKfGSIiHA3vH_BuOlQHu/view?usp=drive_link" target="_blank" rel="noopener">here </a>to view the slides.
-
