--- a/_tkgs-sparkling-moments/2024.md
+++ b/_tkgs-sparkling-moments/2024.md
@@ -15,6 +15,28 @@ Our school participated in Singapore’s inaugural Total Defence Exercise. TKGS 
 Besides the Food Resilience Experience, our students and staff also learned more about how we can contribute to the defence of Singapore through various enriching activities. A big thank you to our uniformed groups and the officers from the Singapore Police Force and Civil Defence Force for sharing your insights with us!
 
 
+<h3><strong>Chinese New Year Celebration 2024</strong></h3>
+
+<center><img src="/images/Sparkling_Moment/2024/cny_s1.jpg"></center>
+TKGS hosted a Chinese New Year celebration to usher in the year of the
+Dragon. We invited parents as well as senior residents from Mountbatten
+to join in the festivities.<br><br>
+To kick start the celebrations, our students unleashed their creativity
+with dragon themed decor for their classrooms. They also put together hampers
+for our invited guests. Next, was a reunion class breakfast to enjoy delicious
+treats and strengthen bonds with their classmates and teachers.
+<center><img src="/images/Sparkling_Moment/2024/cny_s2.png"></center>
+Following the class activities, we convened in the hall for a concert
+brimming with various performances, including calligraphy, martial arts,
+acapella by our own students, and a cultural dance performance by the Singapore
+Chinese Dance Theatre. An unexpected highlight was the appearance of our
+TKGS alumnus - Loh Xuan Yan, Carys of class 2023 who treated us to a medley
+of Chinese New Year songs.<br><br>
+The celebration ended on a high note, with the gifting of oranges, representing
+prosperity and happiness, to our staff, seniors, and parents. It was an
+unforgettable event filled with meaningful conversations and gratitude.
+
+
 <h3><strong>RELEASE OF GCE O LEVEL RESULTS 2023</strong></h3>
 <center><img src="/images/Sparkling_Moment/2024/cover.png"></center>
 TKGS is proud of the outstanding performance of the Class of 2023. The cohort achieved quality <br>O-level grades across a wide range of academic subjects which attests to the academic tenacity and growth mindset demonstrated throughout their journey in TKGS. Beyond academic achievements, the Class of 2023 has demonstrated strength and resilience to rise above their challenges, and we celebrate the tremendous growth of each TKGian in becoming a Gracious Woman, Inquisitive Learner and Servant Leader.
