{"message":"Update file: 2024.md","userId":"819","fileName":"2024.md"}

--- a/_tkgs-sparkling-moments/2024.md
+++ b/_tkgs-sparkling-moments/2024.md
@@ -6,6 +6,12 @@ description: ""
 ---
 <img src="/images/Sparkling_Moment/sparkling_intro.png">
 
+<h3><strong>Highlights from Term 1</strong></h3>
+
+<iframe allowfullscreen="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" frameborder="0" title="YouTube video player" src="https://www.youtube.com/embed/oP0icu1DNlE?si=s5fAkCizCTpy-ajR" height="315" width="560"></iframe>
+
+Term One of 2024 was a flurry of rich and meaningful learning experiences. Watch out Term One Highlights Video for a glimpse of what we have been up to. As the lyrics in the video goes, "…every chapter shapes and teaches us how to be better". Indeed we look forward to many teachable moments in the year ahead!
+
 <h3><strong>Total Defence Day 2024</strong></h3>
 <center><a href="/images/Sparkling_Moment/2024/TDD_cover_pic.jpg"><img src="/images/Sparkling_Moment/2024/TDD_cover_pic_big.jpg"></a></center>
 Our school participated in Singapore’s inaugural Total Defence Exercise. TKGS was one of forty schools selected for the Food Resilience Experience. To simulate food disruption, all canteen stalls were closed on Total Defence Day. Students and staff were only able to eat food packs prepared by Singapore Food Agency for lunch. This experience emphasised the importance of food security, being adaptable and resilient.<br>
