{"message":"Update file: 2024.md","userId":"819","fileName":"2024.md"}

--- a/_tkgs-sparkling-moments/2024.md
+++ b/_tkgs-sparkling-moments/2024.md
@@ -6,7 +6,7 @@ description: ""
 ---
 <img src="/images/Sparkling_Moment/sparkling_intro.png">
 
-<h3><strong>Highlights from Term 1</strong></h3>
+<h3><strong>Highlights from Term One</strong></h3>
 Term One of 2024 was a flurry of rich and meaningful learning experiences. Watch out Term One Highlights Video for a glimpse of what we have been up to. As the lyrics in the video goes, "…every chapter shapes and teaches us how to be better". Indeed we look forward to many teachable moments in the year ahead!<br><br>
 
 <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
