{"message":"Update file: 2023.md","userId":"819","fileName":"2023.md"}

--- a/_tkgs-sparkling-moments/2023.md
+++ b/_tkgs-sparkling-moments/2023.md
@@ -2,8 +2,24 @@
 title: "2023"
 permalink: /tkgs-sparkling-moments/2023/
 description: ""
+variant: markdown
 ---
-<img src="/images/Sparkling_Moment/sparkling_intro.png">
+<center>
+  <h3><strong>TKGS Sparkling Moments</strong></h3>
+</center>
+  <p style="line-height: 1.5;">
+    Introduced in 2019, it has become a tradition for students and staff to recollect significant moments 
+    that touched them in the year. We call it TKGS Sparkling Moments. It gives students the opportunity 
+    to express what they appreciate of the school, teachers and classmates. TKGS Sparkling Moments 
+    could be amazing accomplishments by individuals, teams and classes. They are also cherished 
+    of school events like Leaders Investiture, and the moment of pride winning a class competition. 
+    Or it could be times when teachers and students are inspired by the team work and class spirit 
+    shown during cohort camps, Sports Carnival, the fortnightly TK GLOW! and TK Spirit Week. 
+    More often than not, the Sparkling Moments we love are the simple, ordinary things we do in our 
+    daily interactions that touch a heart, enlighten the mind and bring laughter to all. What we call - 
+    Little things with huge significance. TKGS Sparkling Moments are about people and relationships. 
+    May you enjoy reading the following Sparkling Moments!
+  </p>
 
 <h3><strong>Term 4 Closing Video</strong></h3>
 Capping off the final term of the year, we are delighted to unveil a video that captures the pinnacle moments from both the year and term 4. Experience these cherished highlights anew!
