{"message":"Update file: 2022.md","userId":"819","fileName":"2022.md"}

--- a/_tkgs-sparkling-moments/2022.md
+++ b/_tkgs-sparkling-moments/2022.md
@@ -23,7 +23,8 @@ variant: markdown
 <h3><strong>President’s Scholarship 2022 – G. Solai Valli</strong></h3>
 <img style="width: 50%;" src="/images/22a.jpg">
 <p>We would like to congratulate G. Solai Valli, from the Class of 2019, for receiving the President's Scholarship 2022.</p>
-<p>During her time in TKGS, Solai was an active member of the Softball CCA and Vice-Captain of Elizabeth House. Solai is also the recipient of Singapore Armed Forces Scholarship and will be the first President's Scholar to study international relations and organisations at Leiden University in the Netherlands.</p>
+<p>During her time in TKGS, Solai was an active member of the Softball CCA and Vice-Captain of Elizabeth House. </p>
+<p>Solai is also the recipient of Singapore Armed Forces Scholarship and will be the first President's Scholar to study international relations and organisations at Leiden University in the Netherlands.</p>
 <p>We would like to once again congratulate Solai and her family for her outstanding achievements and we wish her all the best in her future studies.</p>
 <h3><strong>MOE Teaching Scholarship - Clarise Chong Lynn Ching</strong></h3>
 <img style="width: 50%;" src="/images/22b.jpg">
