{"message":"Update file: 2024.md","userId":"819","fileName":"2024.md"}

--- a/_tkgs-sparkling-moments/2024.md
+++ b/_tkgs-sparkling-moments/2024.md
@@ -43,9 +43,9 @@ Our girls came back with many exciting stories to share!
 
 
 <h3><strong>TKGlow</strong></h3>
-As the first term came to a close, excitement filled the air during our bi-weekly TKGlow! session on 23 February. This session was extra special because it was  put together by The Student Leaders' Network (SLN)! They canvassed ideas from their friends to plan a programme to help classes explore new interests and strengthen their relationships as a class.  <br><br>
+As the first term came to a close, excitement filled the air during our bi-weekly TKGlow! session on 23 February. This session was extra special because it was  put together by The Student Leaders' Network (SLN)! They canvassed ideas from their friends to plan a programme to help classes explore new interests and strengthen their relationships as a class. 
 <center><img src="/images/Sparkling_Moment/2024/tkglow1.png"></center>
-Each class had the chance to choose from a variety of activities, ranging from sports to aesthetics. With enthusiasm bubbling over, the student leaders took charge, guiding their classmates through activities like making phone charms, or rose bracelets, balloon sculpting, and even sports like Captains' Ball and Frisbee. <br><br>
+Each class had the chance to choose from a variety of activities, ranging from sports to aesthetics. With enthusiasm bubbling over, the student leaders took charge, guiding their classmates through activities like making phone charms, or rose bracelets, balloon sculpting, and even sports like Captains' Ball and Frisbee.
 <center><img src="/images/Sparkling_Moment/2024/tkglow2.png"></center>
 The atmosphere was electric as laughter and camaraderie filled every corner of the school grounds. Every activity was a testament to the creativity and teamwork among the students.
 
