--- a/_tkgs-sparkling-moments/2024.md
+++ b/_tkgs-sparkling-moments/2024.md
@@ -10,7 +10,7 @@ description: ""
   <p style="line-height: 1.5;">
     Introduced in 2019, it has become a tradition for students and staff to recollect significant moments 
     that touched them in the year. We call it TKGS Sparkling Moments. It gives students the opportunity 
-    to express what they appreciate of the school, teachers and classmates. TKGS Sparkling Moments 
+    to express what they appreciate of the school, teachers and classmates. TKGS Sarkling Moments 
     could be amazing accomplishments by individuals, teams and classes. They are also cherished 
     of school events like Leaders Investiture, and the moment of pride winning a class competition. 
     Or it could be times when teachers and students are inspired by the team work and class spirit 
